--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./tests",
     "build:dev": "npm run build -- --watch --mode=development",
     "start:dev": "npm run build:dev & nodemon server/server.js --ignore dist/ --ignore src/",
     "start": "node server/server.js"
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.13.12",
     "express": "^4.17.1",
     "faker": "^5.4.0",
     "path": "^0.12.7",
@@ -29,6 +30,7 @@
     "@babel/preset-react": "^7.12.13",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "chai": "^4.3.4",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
