--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "9": "^0.0.1",
     "@babel/preset-env": "^7.13.12",
+    "@babel/register": "^7.13.14",
     "express": "^4.17.1",
     "faker": "^5.4.0",
     "path": "^0.12.7",
@@ -31,9 +33,11 @@
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "chai": "^4.3.4",
+    "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "supertest": "^6.1.3",
     "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0"
   }
