--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "webpack",
     "test": "mocha ./tests",
     "build:dev": "npm run build -- --watch --mode=development",
-    "start:dev": "npm run build:dev & nodemon server/server.js --ignore dist/ --ignore src/",
-    "start": "node server/server.js"
+    "start:dev": "npm run build:dev & nodemon server --ignore dist/ --ignore src/",
+    "start": "node server"
   },
   "keywords": [],
   "author": "",
