--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sequelize": "^6.5.1"
+    "sequelize": "^6.5.1",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
-    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
