--- a/package.json
+++ b/package.json
@@ -5,38 +5,47 @@
   "main": "server/server.js",
   "scripts": {
     "build": "webpack",
-    "test": "mocha ./tests",
+    "test": "mocha ./tests --watch --require @babel/register --require @babel/polyfill",
     "build:dev": "npm run build -- --watch --mode=development",
-    "start:dev": "npm run build:dev & nodemon server --ignore dist/ --ignore src/",
-    "start": "node server"
+    "start:dev": "npm run build:dev & nodemon server/index.js --ignore dist/ --ignore src/",
+    "start": "node server/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "9": "^0.0.1",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.12",
     "@babel/register": "^7.13.14",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "axios": "^0.21.1",
+    "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "faker": "^5.4.0",
+    "jsdom-global": "^3.0.2",
     "path": "^0.12.7",
     "pg": "^8.5.1",
+    "prop-types": "^15.7.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sequelize": "^6.5.1",
-    "axios": "^0.21.1"
+    "sequelize": "^6.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
+    "@testing-library/react": "^11.2.6",
     "babel-loader": "^8.2.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "redux-mock-store": "^1.5.4",
     "supertest": "^6.1.3",
     "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0"
