--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "faker": "^5.4.0",
+    "jsdom": "^16.5.3",
     "jsdom-global": "^3.0.2",
     "path": "^0.12.7",
     "pg": "^8.5.1",
